This file summarizes the major and interesting changes for each release. For a
detailed list of changes, please see ChangeLog.

2.19.2 (UNRELEASED)
-------------------
 * apt/dpkg: Don't mark packages downloaded from Launchpad for installation by
   apt. Thanks Brian Murray.

2.19.1 (2015-10-07)
-------------------
 * Consistently intercept "report file already exists" errors in all writers of
   report files (package_hook, kernel_crashdump, and similar) to avoid
   unhandled exceptions on those. (LP: #1500450)
 * apt/dpkg: Fall back to direct Launchpad ddeb download if we can't find it in
   the apt cache. Thanks Brian Murray! (LP: #1500557)
 * doc/data-format.tex: Clarify that key names are being treated as case
   sensitive (unlike RFC822).

2.19 (2015-09-24)
-----------------
 * apport: Drop re-nicing. This might decrease the time a user has to wait for
   apport to finish the core dump for a crashed/hanging foreground process.
   (See LP #1278780)
 * kernel_crashdump: Enforce that the log/dmesg files are not a symlink. This
   prevents normal users from pre-creating a symlink to the predictable .crash
   file, and thus triggering a "fill up disk" DoS attack when the .crash report
   tries to include itself. Thanks to halfdog for discovering this!
   (CVE-2015-1338, part of LP #1492570)
 * SECURITY FIX: Fix all writers of report files (package_hook,
   kernel_crashdump, and similar) to open the report file exclusively, i. e.
   fail if they already exist. This prevents privilege escalation through
   symlink attacks. Note that this will also prevent overwriting previous
   reports with the same same. Thanks to halfdog for discovering this!
   (CVE-2015-1338, LP: #1492570)
 * apport: Ignore process restarts from systemd's watchdog. Their traces are
   usually useless as they don't have any information about the actual reasaon
   why processes hang (like VM suspends or kernel lockups with bad hardware)
   (LP: #1433320)