@@ -5,6 +5,9 @@ detailed list of changes, please see ChangeLog.
 -------------------
  * apt/dpkg: Don't mark packages downloaded from Launchpad for installation by
    apt. Thanks Brian Murray.
+ * Fix backend_apt_dpkg.test_install_packages_system for recent "Fall back to
+   direct Launchpad ddeb download" fix. coreutils-dbgsym should now always be
+   available independent of whether the local system has ddeb apt sources.
 
 2.19.1 (2015-10-07)
 -------------------
